--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<script async crossorigin="anonymous">
+			var selectedTheme = localStorage.getItem("theme");
+			if(selectedTheme) {
+				document.documentElement.setAttribute("data-theme", selectedTheme);
+			}
+		</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
